<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/img_13"
        android:layout_marginTop="8dp"
        />
    <ImageView
        android:id="@+id/menu_icon2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/img_12"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"/>
    <ImageView
        android:id="@+id/prof_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/img" />


    <RatingBar
        android:id="@+id/rat_bar"
        style="@android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/prof_image"
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:numStars="5"
        android:rating="4"
        android:stepSize="1"
        android:theme="@style/YellowStars" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/johan_smith"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@id/rat_bar"
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:text="@string/california_usa"
        android:textSize="17sp"
        android:layout_marginTop="2dp"
        />
    <LinearLayout
        android:id="@+id/card_layout"
        android:layout_below="@id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/gr"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Balance"
                android:textColor="#E9E4E9"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:textColor="#EBE3E3"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="@drawable/gr"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Orders"
                android:textColor="#E9E4E9"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textColor="#EBE3E3"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/gr"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TotalSpent"
                android:textColor="#E9E4E9"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_000_0"
                android:textColor="#EBE3E3"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_layout"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/img_2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/Personal_Information"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/img_1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.08"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/img_3" />

            <TextView
                android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/Your_Order"
            android:textColor="#000000"
            android:textSize="15sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/img_1" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.08"
            android:background="#000000"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/img_4" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/Your_Favourites"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/img_1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.08"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/img_5" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/Payment"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/img_1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.08"
            android:background="#000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/img_6" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="Recommended_Shops"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/img_1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.08"
            android:background="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/img_7" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="Nearest_Shop"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/img_1" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.08"
            android:background="#000000"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="12dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/img_8" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="63dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="Logout"
                android:textColor="#000000"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/img_1" />

        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFF0000"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:elevation="8dp"
        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/img_9"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/img_10"
            android:layout_marginStart="50dp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/img_11"
            android:layout_marginStart="50dp"/>
        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/gr"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/img_2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>